# city_weather

./: Cargo.toml  LICENSE  README.md  config.toml
src/: app.rs  lib.rs  main.rs  utils.rs  weather_client.rs
