[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
getset = "0.1.2"
itertools = "0.13.0"
prettytable-rs = "0.10.0"
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-tracing = "0.5.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
