[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
getset = "0.1.2"
itertools = "0.13.0"
prettytable-rs = "0.10.0"
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-tracing = "0.5.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
absolute_paths = "deny"
arithmetic_side_effects = "deny"
as_ptr_cast_mut = "deny"
assertions_on_result_states = "deny"
bool_to_int_with_if = "deny"
borrow_as_ptr = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_ptr_alignment = "deny"
checked_conversions = "deny"
clone_on_ref_ptr = "deny"
cloned_instead_of_copied = "deny"
copy_iterator = "deny"
create_dir = "deny"
dbg_macro = "warn"
default_trait_access = "deny"
default_union_representation = "deny"
deref_by_slicing = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
enum_glob_use = "deny"
exit = "deny"
expl_impl_clone_on_copy = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
filetype_is_file = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
float_cmp_const = "deny"
fn_params_excessive_bools = "deny"
fn_to_numeric_cast_any = "deny"
format_push_string = "deny"
from_iter_instead_of_collect = "deny"
get_unwrap = "deny"
if_not_else = "deny"
if_then_some_else_none = "deny"
implicit_clone = "deny"
implicit_hasher = "deny"
index_refutable_slice = "deny"
inefficient_to_string = "deny"
inline_always = "deny"
into_iter_without_iter = "deny"
invalid_upcast_comparisons = "deny"
items_after_statements = "deny"
iter_filter_is_ok = "deny"
iter_filter_is_some = "deny"
iter_not_returning_iterator = "deny"
iter_without_into_iter = "deny"
large_digit_groups = "deny"
large_futures = "deny"
large_include_file = "deny"
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
linkedlist = "deny"
lossy_float_literal = "deny"
macro_use_imports = "deny"
manual_c_str_literals = "deny"
manual_is_variant_and = "deny"
manual_let_else = "deny"
manual_ok_or = "deny"
many_single_char_names = "deny"
map_err_ignore = "deny"
map_unwrap_or = "deny"
match_bool = "deny"
match_on_vec_items = "deny"
match_same_arms = "deny"
match_wild_err_arm = "deny"
match_wildcard_for_single_variants = "deny"
maybe_infinite_iter = "deny"
mem_forget = "deny"
mismatching_type_param_order = "deny"
missing_asserts_for_indexing = "deny"
missing_safety_doc = "deny"
mixed_read_write_in_expression = "deny"
mod_module_files = "deny"
multiple_inherent_impl = "deny"
multiple_unsafe_ops_per_block = "deny"
mut_mut = "deny"
mutex_atomic = "deny"
naive_bytecount = "deny"
needless_bitwise_bool = "deny"
needless_continue = "deny"
needless_for_each = "deny"
negative_feature_names = "deny"
no_effect_underscore_binding = "deny"
no_mangle_with_rust_abi = "deny"
option_as_ref_cloned = "deny"
option_option = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
ptr_as_ptr = "deny"
ptr_cast_constness = "deny"
pub_underscore_fields = "deny"
pub_without_shorthand = "deny"
range_minus_one = "deny"
range_plus_one = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_closure_for_method_calls = "deny"
redundant_else = "deny"
redundant_feature_names = "deny"
redundant_type_annotations = "deny"
ref_as_ptr = "deny"
ref_binding_to_reference = "deny"
ref_option_ref = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_self_not_must_use = "deny"
same_functions_in_if_condition = "deny"
same_name_method = "deny"
semicolon_if_nothing_returned = "deny"
semicolon_inside_block = "deny"
single_char_pattern = "deny"
stable_sort_primitive = "deny"
str_split_at_newline = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
string_to_string = "deny"
struct_excessive_bools = "deny"
suspicious_xor_used_as_pow = "deny"
transmute_ptr_to_ptr = "deny"
trivially_copy_pass_by_ref = "deny"
try_err = "deny"
unchecked_duration_subtraction = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "warn"
unnecessary_box_returns = "deny"
unnecessary_join = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unnecessary_wraps = "deny"
unneeded_field_pattern = "deny"
unnested_or_patterns = "deny"
unsafe_derive_deserialize = "deny"
unused_async = "deny"
used_underscore_binding = "deny"
verbose_bit_mask = "deny"
verbose_file_reads = "deny"
wildcard_dependencies = "deny"
zero_sized_map_values = "deny"
